--- a/保险.md
+++ b/保险.md
@@ -27,16 +27,18 @@
 
 - 医疗险是住院医疗费用报销，社保报销之后剩余的部分，1万元以上可以全部报销（大同类产品都是这样）。另外恶性肿瘤住院期间补贴每天200元，算是特色部分（百万医疗）。
 
+## 一些术语
+- 偿还率：偿付能力是保险公司偿还债务的能力。保险公司应当具有与其风险和业务规模相适应的资本，确保偿付能力充足率不低于100%。
+- 择优理赔：比如新规把甲状腺癌一期从重疾划归轻症，择优就按照重疾来理赔。新规把心脏搭桥手术从开胸改为微创也赔，择优就按照微创也能理赔
+- 新旧定义：下个月开始，保险行业协会固定28种重疾和3种轻症定义，其他疾病由保险公司在规定范围内设计。
 
+## 达尔文3号 vs 粤享保险
+![image-20210126225152221](https://i.loli.net/2021/01/26/9L842OTouZFhneH.png)
 
-## 国内比较大的公司
+达尔文三号的公司，信泰保险是我们经常说的互联网保险公司，而另一个说太平洋保险（大保险公司）。虽然达尔文性价比很高，但是需要考虑偿还率，一般是200%，但是信泰只有150%。 公司运营状况是会影响赔付率的。
+![image-20210126225456849](https://i.loli.net/2021/01/26/UizSCnv13Wpld4g.png)
 
-- 人寿
-- 平安（某些产品会比较贵）
-
-
-
-##  我自己购买的产品
+[信泰官网](http://www.xintai.com/web/info/specialInfo/solvencyReport/periodicDisclosure/index.jsp)
 
 
 
