--- a/保险.md
+++ b/保险.md
@@ -29,8 +29,10 @@
 
 ## 一些术语
 - 偿还率：偿付能力是保险公司偿还债务的能力。保险公司应当具有与其风险和业务规模相适应的资本，确保偿付能力充足率不低于100%。
-- 择优理赔：比如新规把甲状腺癌一期从重疾划归轻症，择优就按照重疾来理赔。新规把心脏搭桥手术从开胸改为微创也赔，择优就按照微创也能理赔
+- 择优理赔：比如新规把甲状腺癌一期从重疾划归轻症，择优就按照重疾来理赔。新规把心脏搭桥手术从开胸改为微创也赔，择优就按照微创也能理赔。简而言之就是对客户好的。
 - 新旧定义：下个月开始，保险行业协会固定28种重疾和3种轻症定义，其他疾病由保险公司在规定范围内设计。
+- 一些赔付率高的病症：
+![image-20210126230713510](https://i.loli.net/2021/01/26/w68Q9qs1WfPJotn.png)
 
 ## 达尔文3号 vs 粤享保险
 ![image-20210126225152221](https://i.loli.net/2021/01/26/9L842OTouZFhneH.png)
@@ -39,6 +41,5 @@
 ![image-20210126225456849](https://i.loli.net/2021/01/26/UizSCnv13Wpld4g.png)
 
 [信泰官网](http://www.xintai.com/web/info/specialInfo/solvencyReport/periodicDisclosure/index.jsp)
-
 
 
