--- a/保险.md
+++ b/保险.md
@@ -9,6 +9,9 @@
 - 意外险就包括了各种情况下的伤残，根据严重程度按照比例赔付，最高赔到保额。而且它还包括了意外门诊的报销，意外住院的补贴，相当于意外的大事小事都保障了，因为最后能够返回保费，所以2000左右价格差不多了。
 - 因为伤残等级分为10级，需要关注下保险产品包含了多少级。这个一定要看清楚，不然碰到轻的情况赔付不到。
 
+- 意外险是简单实用的险种，因意外事故受伤、身故，就可以获得赔偿。一款标准的意外险，通常会包括以下三个保障责任：意外身故：人如果因为意外去世了，保险公司就直接赔一笔钱。买50万保额，就赔50万；买100万，就赔100万。意外伤残：如果因为意外残疾的，可以按比例获得赔偿。伤残分为一至十级，一级伤残最严重，就赔100%保额；二级伤残，就赔90%保额，以此类推。意外医疗：因为意外受伤的医疗费用，保险公司可以报销。这三点是意外险必不可少的责任，如果少一了任一项，这一款产品都是垃圾，果断拉黑。
+
+
 ## 重疾险：
 
 - 重疾险包括了120种重疾赔付和60种轻症三次赔付。因为只要确诊对于疾病就直接给到对应的保险金，所以保费比医疗险高。另外轻症豁免和身故保障都有，也算是和市场大部分保障内容类似。
@@ -42,4 +45,7 @@
 
 [信泰官网](http://www.xintai.com/web/info/specialInfo/solvencyReport/periodicDisclosure/index.jsp)
 
+## 参考资料
+- https://www.zhihu.com/question/30986150/answer/397263550
+- 
 
