--- a/保险.md
+++ b/保险.md
@@ -45,6 +45,9 @@
 
 [信泰官网](http://www.xintai.com/web/info/specialInfo/solvencyReport/periodicDisclosure/index.jsp)
 
+## 意外险 + 医疗险
+[中国人寿](https://pbf.winbaoxian.com/planBook/planBookResult/pages/planbkTemplate.html?nw=1&cardUuid=a15bf673363b11e7b39eecf4bbdeffbc&dfSort=0&theme=healthy&inGroup=true&wxMpAppid=wxc4e379b0c2428c89&uuid=bd56c62c73f9457782858138ecde2a34&token=52d1c9cf-bb6f-71a6-3edc-61b2886325b7&autoOauth=true)
+
 ## 参考资料
 - https://www.zhihu.com/question/30986150/answer/397263550
 - 
